# RErl

./: .gitignore  Cargo.toml  LICENSE  README.md  RuErl-design.jsonld  RuErl-design.md  code-coverage.md  swerl-rust-reengineering-tool.jsonld  testing-target.jsonld
src/: builder.rs  errors.rs  lib.rs  message.rs  pid.rs  process.rs  registrar.rs  safe_data.rs  types.rs
src/otp/: base.rs  event_manager.rs  gen_server.rs  gen_statem.rs  mod.rs
tests/: rerl_event_manager_tests.rs  rerl_gen_server_tests.rs  rerl_gen_statem_tests.rs  rerl_tests.rs
